@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-19T00:40:40Z",
-  "count_outdated" : 60,
-  "uniques_outdated" : 24,
+  "timestamp" : "2022-09-19T16:09:36Z",
+  "count_outdated" : 61,
+  "uniques_outdated" : 25,
   "count" : 66,
   "uniques" : 28,
   "views" : [
-    {
-      "timestamp": "2022-09-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-08T00:00:00Z",
       "count": 3,
